20-alb-ingress-internal/126-ingress-internal/05-curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curl
      image: curlimages/curl
      command: ["sleep", "86400"]
